Fixes z-index on all screens.

--- a/annotation.css
+++ b/annotation.css
@@ -67,8 +67,24 @@
     font-style: italic;
 }
 
+div#subcategory-list ul {
+    padding: 0px;
+}
+
+input.checkstep-checkbox {
+  content: '';
+  appearance: checkbox !important;
+  border: 1px solid grey;
+  border-radius: 3px;
+  display: inline !important;
+  width: 16px !important;
+  height: 16px !important;
+  margin-right: 0.5em;
+  margin-top: 0.5em;
+  vertical-align: -2px;
+}
+
 #annotation-popup .checkstep-button {
-/*  background-color: #4CAF50; */ /* Green */
   background-color: #3479F6; /* Blue */
   border: none;
   border-radius: 4px;
